<resources>
    <string name="app_name">PKL Track</string>
    <string name="welcome">WELCOME</string>
    <string name="app_title"><b>PKL</b> Track</string>
    <string name="sign_in">Sign In</string>
    <string name="logo_sekolah">Logo Sekolah</string>
    <string name="background_image_desc">Background Image</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="back">Back</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at ipsum id massa ultricies iaculis. Integer imperdiet velit a eros fringilla condimentum non quis nulla. Curabitur non purus lacinia, efficitur eros sit amet, congue turpis. Aliquam fermentum leo vel convallis interdum. Aliquam sit amet enim non sapien feugiat facilisis. Donec eget purus et nunc lacinia ornare ac id nulla. Aliquam non erat sed diam viverra semper non in leo. Aliquam vel lacus id mi efficitur aliquet eu et lorem. Curabitur velit ex, convallis sit amet urna nec, commodo blandit felis. Cras vel iaculis sapien, quis auctor libero. Quisque in ante nisi. Quisque condimentum augue vel est tempus mattis vitae non justo. Fusce purus magna, porta nec diam congue, mollis ultrices est. Donec feugiat dui diam, non porta odio pulvinar gravida. Ut nibh tortor, finibus placerat sagittis consequat, congue in nulla. Aliquam erat volutpat</string>
</resources>